@@ -1,3 +1,8 @@
+2012-08-06  Tom Tromey  <tromey@redhat.com>
+
+	PR cli/14392:
+	* cli/cli-cmds.c (list_command): Filter 'sals_end'.
+
 2012-08-03  Tom Tromey  <tromey@redhat.com>
 
 	* dwarf2-frame.c (dwarf2_frame_cache): Call do_cleanups before
